[package]
name = "yagol"
version = "0.1.0"
authors = ["Erik Moldtmann <erik@moldtmann.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.41.0"
gl = "0.14.0"
crossbeam-channel = "0.5.1"
regex = "1.5.4"
nalgebra-glm = "0.13.0"